# book-shop-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
auth_app/: urls.py  views.py
auth_app/templates/auth_app/: login_app.html  logout_app.html  registration_app.html
auth_user/: urls.py  views.py
auth_user/templates/auth_user/: login_app.html  logout_app.html  registration_app.html
book_api/: serializers.py  urls.py  views.py
book_app/: forms.py  mixins.py  models.py  urls.py  views.py
book_app/migrations/: 0001_initial.py
book_app/static/css/: base.css
book_app/templates/book_app/: base.html  create_book.html  delete_book.html  detail_book.html  list_books.html  main.html  update_book.html
book_project/: settings.py  urls.py
books/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/templates/books/: create_book.html  delete_book.html  detail_book.html  list_books.html  main.html  update_book.html
core/: settings.py  urls.py
static/css/: base.css
