[project]
name = "book-shop-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5,<6",
    "djangorestframework>=3.16.1",
    "gunicorn>=26.0.0",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["ALL"]
"*/settings.py" = ["E501"]
"manage.py" = ["E402"]
